app/assets/stylesheets/tag_searches.scss
// Place all the styles related to the tag_searches controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

@import "variables_and_mixins";

.category-tag-grid {
    display:grid;
    grid-template-columns: repeat(auto-fill, minmax(48%, 1fr));
    align-items: center;
    justify-content: center;
    width: auto;
    height: auto;
}

.category-tag-grid-item {
    width: auto;
    height: auto;
    margin: 5px;
    padding: 3px;
    color: white;
    display:flex;
    justify-content: center;
    align-items: center;
    text-align: center !important;
    flex-direction: column;
    border-radius: 3px;
}

.category-tag-grid-item p {
    margin: auto;
}

.selected-list li{
    list-style: none;
}

.btn-active {
    border: 2px solid red;
    background-color: #dc3545;
}

.btn-active:hover {
    background-color: brown;
}

.danger-list li {
    color: #dc3545;
}

#grammar-tags-notice {
    font-size: 1.2rem;
    color: #dc3545;
}

.tag-search-tag-selector {
    // display: flex;
    // flex-direction: row;
}

#tag-accumulator {
    position: sticky;
    top: 10px;

    margin-bottom: 0.5rem;
    background: $ru200;
    border-radius: 0.5rem;
    padding: 0.5rem;
    max-height: 20vh;
    overflow-y: auto;
}

#tag-accumulator li {
    list-style: none;
    background-color: $tag100;
    color: $tag900;
    border-radius: 0.4rem;
    padding: 0.2rem 0.5rem;
    margin: 0.2rem 0;
    cursor: pointer;
}

.tagging-submit-button {
    text-align: center;
    background: linear-gradient(to top right, $primary700, $primary800);
    padding: 0.4rem;
    color: #fefefe;
    border: none;
    border-radius: 0.4rem;
    font-size: 0.9rem;
    box-shadow: 0.2rem 0.2rem 0.2rem $ru400;
}
.tagging-submit-button:hover {
    cursor: pointer;
    background: $primary900;
}

